# proton-mo2-installer

./: .gitignore  .gitmodules  .pylintrc  README.md  dialog.txt  setup  setup.cfg
gamesinfo/: enderal.sh  enderalspecialedition.sh  fallout3.sh  fallout4.sh  falloutnewvegas.sh  falloutnewvegasrussian.sh  skyrim.sh  skyrimspecialedition.sh
handlers/: nxm-broker.sh  nxm-handler.desktop
legacy/gamesinfo/: enderalspecialedition.sh  fallout3goty.sh  morrowind.sh  oblivion.sh
legacy/utils/: compat-tool-remap.py
pmf/: __main__.py  database.py  main.py  tui.py  utils.py
pmf/games/: __init__.py  skyrim.py  skyrim_le.py  skyrim_se.py
pmf/gui/: pages.py  windows.py
pmf/mod_tools/: __init__.py  fnis.py  mo2.py  proton_shunt.py
src/: main.py  mo2.py  steam.py  tui.py  utils.py
src/games/: __init__.py  skyrim_le.py  skyrim_se.py
src/mod_tools/: __init__.py  mo2.py  nemesis.py
utils/: compat-tool-remap.py
