[metadata]
name = proton-modders-framework
version = 2.0.0
description = A framework for managing and maintaining modding tools under Proton (Steam Play for Linux)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ralgar/proton-modders-framework
author = Ryan Algar
author_email = 59636191+ralgar@users.noreply.github.com
license = GPL3
license_file = LICENSE
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
install_requires =
    libarchive-c>=4.0
    requests
    vdf>=3.2
python_requires = >=3.7

[options.packages.find]
exclude =
    legacy*
    tests*

[options.entry_points]
console_scripts =
    pmf = pmf.main:main

[options.package_data]
pmf.resources =
    *
